// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CurrentCompetitor snapshots > TTB (Time To Beat) states > should match snapshot - ahead of leader 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > TTB (Time To Beat) states > should match snapshot - behind leader 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > TTB (Time To Beat) states > should match snapshot - exactly on pace 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > TTB (Time To Beat) states > should match snapshot - no TTB info 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > basic states > should match snapshot - departing competitor 1`] = `
<div>
  <div
    class="_container_610b2e _departing_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > basic states > should match snapshot - finished competitor 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > basic states > should match snapshot - hidden 1`] = `
<div>
  <div
    class="_container_610b2e _hidden_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > basic states > should match snapshot - null competitor 1`] = `
<div>
  <div
    class="_container_610b2e _hidden_610b2e"
  />
</div>
`;

exports[`CurrentCompetitor snapshots > basic states > should match snapshot - running competitor 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > gate penalty states > should match snapshot - all gates clear 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > gate penalty states > should match snapshot - multiple penalties mixed 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <span
          class="_gatePenalty_610b2e _penalty2_610b2e"
        >
          2
        </span>
        <span
          class="_gatePenalty_610b2e _penalty50_610b2e"
        >
          4
        </span>
        <span
          class="_gatePenalty_610b2e _penalty2_610b2e"
        >
          5
        </span>
        <div
          class="_pen_610b2e _hasPenalty_610b2e"
        >
          54
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > gate penalty states > should match snapshot - no gates (empty string) 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > gate penalty states > should match snapshot - partially completed gates 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <span
          class="_gatePenalty_610b2e _penalty2_610b2e"
        >
          3
        </span>
        <div
          class="_pen_610b2e _hasPenalty_610b2e"
        >
          2
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > gate penalty states > should match snapshot - single miss (50s) 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <span
          class="_gatePenalty_610b2e _penalty50_610b2e"
        >
          3
        </span>
        <div
          class="_pen_610b2e _hasPenalty_610b2e"
        >
          50
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > gate penalty states > should match snapshot - single touch (2s) 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        NOVAK Jan
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <span
          class="_gatePenalty_610b2e _penalty2_610b2e"
        >
          2
        </span>
        <div
          class="_pen_610b2e _hasPenalty_610b2e"
        >
          2
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > name formatting > should match snapshot - country code as club 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        FOX Jessica
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > name formatting > should match snapshot - long name 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        ALEXANDROPOULOS-SMITHSON
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentCompetitor snapshots > name formatting > should match snapshot - short name 1`] = `
<div>
  <div
    class="_container_610b2e"
    data-testid="oncourse"
  >
    <div
      class="_row_610b2e _vertical_610b2e"
    >
      <span
        class="_runningIndicator_610b2e"
      >
        ►
      </span>
      <div
        class="_bib_610b2e"
      >
        42
      </div>
      <div
        class="_name_610b2e"
      >
        LI Wei
      </div>
      <div
        class="_gatesContainer_610b2e"
      >
        <div
          class="_pen_610b2e _noPenalty_610b2e"
        >
          0
        </div>
      </div>
      <div
        class="_total_610b2e"
      >
        95.32
      </div>
    </div>
  </div>
</div>
`;
